--- a/style.css
+++ b/style.css
@@ -7,10 +7,10 @@
   font-family: 'poppins', sans-serif;
 }
 
-body {
-  height: 100vh;
-  background: linear-gradient(#1c1917 50%, #ffb929 50%);
-}
+/* body {
+  height: 100%;
+  background-image: linear-gradient(#1c1917 50%, #ffb929 50%);
+} */
 .container {
   font-size: 16px;
   width: 90vh;
@@ -47,4 +47,69 @@ body {
   background-color: #ffb929;
   border: none;
   cursor: pointer;
+}
+#results {
+  color: white;
+}
+.info {
+  position: relative;
+  display: grid;
+  grid-template-columns: 4fr 8fr;
+  margin-top: 1.2em;
+}
+.poster {
+  width: 100%;
+}
+h2 {
+  text-align: center;
+  font-size: 1.5em;
+  font-weight: 600;
+}
+.rating {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 0.6em;
+  margin: 0.6em 0 0.9em 0;
+}
+.rating img {
+  width: 1.2em;
+}
+.rating h4 {
+  display: inline-block;
+  font-size: 1.1em;
+  font-weight: 500;
+}
+.details {
+  display: flex;
+  font-size: 0.95em;
+  gap: 1em;
+  justify-content: center;
+  color: #a0a0a0;
+  margin: 0.6em 0;
+  font-weight: 300;
+}
+.genre {
+  display: flex;
+  justify-content: space-around;
+}
+.genre div {
+  border: 1px solid #a0a0a0;
+  font-size: 0.75em;
+  padding: 0.4em 1.6em;
+  border-radius: 0.4em;
+  font-weight: 300;
+}
+h3 {
+  font-weight: 500;
+  margin-top: 1.2em;
+}
+p {
+  font-size: 0.9em;
+  font-weight: 300;
+  line-height: 1.8em;
+  text-align: #a0a0a0;
+}
+.msg {
+  text-align: center;
 }
